--- a/source/Fasciculus.Site/Views/Main/Releases.cshtml
+++ b/source/Fasciculus.Site/Views/Main/Releases.cshtml
@@ -16,5 +16,6 @@
 <p>
     <img class="fsc-tododone" src="~/images/done.png" /> Programming<br />
     <img class="fsc-tododone" src="~/images/done.png" /> Documenting<br />
+    <img class="fsc-tododone" src="~/images/todo.png" /> Splitting Fasciculus.Core<br />
     <img class="fsc-tododone" src="~/images/todo.png" /> Generating API Documentation
 </p>
