--- a/source/Fasciculus.Site/Views/Api/Package.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Package.cshtml
@@ -1,4 +1,4 @@
-@model ApiSymbolViewModel<IPackageSymbol>
+@model ApiPackageViewModel
 @{
     IPackageSymbol pkg = Model.Symbol;
     ApiAppliesTo appliesTo = new(pkg.Frameworks);
@@ -13,7 +13,8 @@
 </ul>
 <h2 id="definition">Definition</h2>
 <p><a href="@(pkg.Repository)">View on GitHub</a>.</p>
-<p>@Html.Raw(pkg.Comment.Summary)</p>
+<p>@Html.Raw(Model.Description)</p>
+@Html.Raw(Model.Content)
 <h2 id="namespaces">Namespaces</h2>
 <table class="table">
     <thead>
