--- a/source/Fasciculus.Docs.Preview/Views/Shared/_Layout.cshtml
+++ b/source/Fasciculus.Docs.Preview/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
                         <li class="nav-item"><a class="nav-link" href="~/Blog/">Blog</a></li>
                         <li class="nav-item"><a class="nav-link" href="~/Specifications/">Specifications</a></li>
                         <li class="nav-item"><a class="nav-link" href="~/Packages/">Packages</a></li>
+                        <li class="nav-item"><a class="nav-link" href="~/Namespaces/">Namespaces</a></li>
                         <li class="nav-item"><a class="nav-link" href="~/Debug/">Debug</a></li>
                     </ul>
                 </div>
