--- a/source/Fasciculus.Site/Views/Shared/_Layout.cshtml
+++ b/source/Fasciculus.Site/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
         <script defer src="~/lib/katex/katex.min.js"></script>
         <script defer src="~/lib/katex/contrib/auto-render.min.js" onload="renderMathInElement(document.body);"></script>
     }
-    <link rel="stylesheet" href="~/css/fasciculus3.css" />
+    <link rel="stylesheet" href="~/css/fasciculus.css" />
 </head>
 <body>
     <header>
