integrated Fasciculus.Algorithms

--- a/source/Fasciculus.Site/Views/Licenses/Index.cshtml
+++ b/source/Fasciculus.Site/Views/Licenses/Index.cshtml
@@ -8,8 +8,8 @@
     <thead>
         <tr>
             <th>Package</th>
-            <th class="text-center">Dependencies</th>
-            <th>License Types</th>
+            <th class="text-center">Third-Party Dependencies</th>
+            <th>Third-Party License Types</th>
         </tr>
     </thead>
     <tbody>
