--- a/source/Fasciculus.Site/Views/Licenses/PackageLicenses.cshtml
+++ b/source/Fasciculus.Site/Views/Licenses/PackageLicenses.cshtml
@@ -10,9 +10,9 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Dependency</th>
+                <th>Third-Party Dependency</th>
                 <th>Version</th>
-                <th>License</th>
+                <th>Third-Party License</th>
                 <th>Link</th>
             </tr>
         </thead>
