--- a/source/Fasciculus.Site/Views/Specifications/Index.cshtml
+++ b/source/Fasciculus.Site/Views/Specifications/Index.cshtml
@@ -14,6 +14,7 @@
 
 <ul>
     <li><a href="https://learn.microsoft.com/en-us/dotnet/api/">.NET API browser</a></li>
+    <li><a href="https://learn.microsoft.com/en-us/visualstudio/msbuild/property-functions?view=vs-2022">MSBuild Property functions</a></li>
 </ul>
 
 <ul>
