--- a/source/Fasciculus.Site/Views/_ViewImports.cshtml
+++ b/source/Fasciculus.Site/Views/_ViewImports.cshtml
@@ -5,6 +5,7 @@
 @using Fasciculus.Site.Api.Models
 @using Fasciculus.Site.Blog.Models
 @using Fasciculus.Site.Licenses.Models
+@using Fasciculus.Site.Releases.Models
 @using Fasciculus.Site.Specifications.Models
 @using Fasciculus.Site.Models
 @using Fasciculus.Site.Navigation
